--- a/index.html
+++ b/index.html
@@ -131,25 +131,25 @@
 
   <!-- Side Menu area start -->
 
-  <div class="sidebar d-flex justify-content-center align-items-center">
-      <ul class="navbar-nav">
-          <li class="nav-item">
-              <a class="nav-link" href="index.html">アロリエ クリニック</a>
+  <div class="sidebar d-flex justify-content-center align-items-center navbar-nav nav-item nav-link">
+      <ul >
+          <li >
+              <a  href="index.html">アロリエ クリニック</a>
             </li>
-          <li class="nav-item">
-              <a class="nav-link" href="doctorsIntro.html">医師紹介</a>
+          <li >
+              <a  href="doctorsIntro.html">医師紹介</a>
           </li>
-          <li class="nav-item">
-              <a class="nav-link" href="treatment.html">診療内容</a>
+          <li >
+              <a  href="treatment.html">診療内容</a>
           </li>
-          <li class="nav-item">
-              <a class="nav-link" href="tariff.html">料金表</a>
+          <li >
+              <a  href="tariff.html">料金表</a>
           </li>
-          <li class="nav-item">
-              <a class="nav-link" href="timing.html">診療時間・アクセス</a>
+          <li >
+              <a  href="timing.html">診療時間・アクセス</a>
           </li>
-          <li class="nav-item">
-              <a class="nav-link" href="contact.html">お問い合わせ</a>
+          <li >
+              <a  href="contact.html">お問い合わせ</a>
           </li>
           <li>
               <p class="text-call">完全予約制 / オール女性スタッフ</p>
