--- a/contact.html
+++ b/contact.html
@@ -134,19 +134,22 @@
     <div class="sidebar d-flex justify-content-center align-items-center">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">医師紹介</a>
+                <a class="nav-link" href="index.html">アロリエ クリニック</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">診療内容</a>
+                <a class="nav-link" href="doctorsIntro.html">医師紹介</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">料金表</a>
+                <a class="nav-link" href="treatment.html">診療内容</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">診療時間・アクセス</a>
+                <a class="nav-link" href="tariff.html">料金表</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">お問い合わせ</a>
+                <a class="nav-link" href="timing.html">診療時間・アクセス</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="contact.html">お問い合わせ</a>
             </li>
             <li>
                 <p class="text-call">完全予約制 / オール女性スタッフ</p>
@@ -223,137 +226,137 @@
   contact part start
  =====================================-->
 
-  <section id="contact_section">
-    <div class="container">
-      <div class="contact_header">
-        <span>Contact</span>
-        <h2>お問い合わせ</h2>
-      </div>
-     
-      <div class="contact_1">
-        <div class="row">
-            <div class="col-lg-5 m-auto">
-                <div class="contact_num">
-                    <ul>
-                        <li>
-                            <div class="florItem_current">
-                              <div class="florItem_num">1</div>
-                              <div class="florItem_ttl mt-3">
-                                <h6>情報の入力</h6>
-                            </div>
-                            </div>
-                          </li>
-                          <li>
-                            <div class="florItem_current">
-                              <div class="florItem_num">2</div>
-                              <div class="florItem_ttl  mt-3">
-                                <h6>ご入力内容の確認</h6>
-                            </div>
-                            </div>
-                          </li>
-                          <li>
-                            <div class="florItem_current">
-                              <div class="florItem_num">3</div>
-                              <div class="florItem_ttl  mt-3">
-                                <h6>送信完了</h6>
-                            </div>
-                            </div>
-                          </li>
-                    </ul>
+    <section id="contact_section">
+        <div class="container">
+            <div class="contact_header">
+                <span>Contact</span>
+                <h2>お問い合わせ</h2>
+            </div>
+
+            <div class="contact_1">
+                <div class="row">
+                    <div class="col-lg-5 m-auto">
+                        <div class="contact_num">
+                            <ul>
+                                <li>
+                                    <div class="florItem_current">
+                                        <div class="florItem_num">1</div>
+                                        <div class="florItem_ttl mt-3">
+                                            <h6>情報の入力</h6>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="florItem_current">
+                                        <div class="florItem_num">2</div>
+                                        <div class="florItem_ttl  mt-3">
+                                            <h6>ご入力内容の確認</h6>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="florItem_current">
+                                        <div class="florItem_num">3</div>
+                                        <div class="florItem_ttl  mt-3">
+                                            <h6>送信完了</h6>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-8 m-auto">
+                        <div class="contact_massege">
+                            <h3>お返事に数日を要する場合がございます。<br>
+                                お急ぎの方は、03-6447-7427までお問い合わせください。</h3>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-8 m-auto">
-                <div class="contact_massege">
-                    <h3>お返事に数日を要する場合がございます。<br>
-                        お急ぎの方は、03-6447-7427までお問い合わせください。</h3>
-                </div>
-            </div>
-        </div>
-      </div>
 
 
-      <div class="contact_form">
-        <div class="row align-items-center">
-            <div class="col-lg-4">
-                <div class="form_text">
-                    <h5>お問い合わせ種別
-                       <span> 必須</span></h5>
+            <div class="contact_form">
+                <div class="row align-items-center">
+                    <div class="col-lg-4">
+                        <div class="form_text">
+                            <h5>お問い合わせ種別
+                                <span> 必須</span></h5>
+                        </div>
+                    </div>
+                    <div class="col-lg-8">
+                        <div class="form_input">
+                            <input type="text" placeholder="例） 山田 花子">
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="col-lg-8">
-                <div class="form_input">
-                    <input type="text" placeholder="例） 山田 花子">
+                <div class="row align-items-center mt-4">
+                    <div class="col-lg-4">
+                        <div class="form_text">
+                            <h5>お名前
+                                <span> 必須</span></h5>
+                        </div>
+                    </div>
+                    <div class="col-lg-8">
+                        <div class="form_input">
+                            <input type="text" placeholder="選択してください">
+                        </div>
+                    </div>
+                </div>
+                <div class="row align-items-center mt-4">
+                    <div class="col-lg-4">
+                        <div class="form_text">
+                            <h5>メールアドレス
+                                <span>必須</span></h5>
+                        </div>
+                    </div>
+                    <div class="col-lg-8">
+                        <div class="form_input">
+                            <input type="text" placeholder="例） xxxx@xxx.jp">
+                        </div>
+                    </div>
+                </div>
+                <div class="row align-items-center mt-4">
+                    <div class="col-lg-4">
+                        <div class="form_text">
+                            <h5>ご連絡先電話番号</h5>
+                        </div>
+                    </div>
+                    <div class="col-lg-8">
+                        <div class="form_input">
+                            <input type="text" placeholder="例） 0312345678 （ハイフンなし半角）">
+                        </div>
+                    </div>
+                </div>
+                <div class="row mt-4">
+                    <div class="col-lg-4">
+                        <div class="form_text">
+                            <h5>メッセージ本文
+                                <span>必須</span></h5>
+                        </div>
+                    </div>
+                    <div class="col-lg-8">
+                        <div class="form_input_text">
+                            <input type="text">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-7 m-auto">
+                        <div class="contact_para text-center">
+                            <h4><input type="checkbox"> 個人情報取り扱いについてをご確認のうえへお進みください。</h4>
+                            <button class="button-p">
+                                <p>確認する</p>
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="row align-items-center mt-4">
-            <div class="col-lg-4">
-                <div class="form_text">
-                    <h5>お名前
-                       <span> 必須</span></h5>
-                </div>
-            </div>
-            <div class="col-lg-8">
-                <div class="form_input">
-                    <input type="text" placeholder="選択してください">
-                </div>
-            </div>
-        </div>
-        <div class="row align-items-center mt-4">
-            <div class="col-lg-4">
-                <div class="form_text">
-                    <h5>メールアドレス
-                       <span>必須</span></h5>
-                </div>
-            </div>
-            <div class="col-lg-8">
-                <div class="form_input">
-                    <input type="text" placeholder="例） xxxx@xxx.jp">
-                </div>
-            </div>
-        </div>
-        <div class="row align-items-center mt-4">
-            <div class="col-lg-4">
-                <div class="form_text">
-                    <h5>ご連絡先電話番号</h5>
-                </div>
-            </div>
-            <div class="col-lg-8">
-                <div class="form_input">
-                    <input type="text" placeholder="例） 0312345678 （ハイフンなし半角）">
-                </div>
-            </div>
-        </div>
-        <div class="row mt-4">
-            <div class="col-lg-4">
-                <div class="form_text">
-                    <h5>メッセージ本文
-                        <span>必須</span></h5>
-                </div>
-            </div>
-            <div class="col-lg-8">
-                <div class="form_input_text">
-                    <input type="text">
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-7 m-auto">
-                <div class="contact_para text-center">
-                    <h4><input type="checkbox"> 個人情報取り扱いについてをご確認のうえへお進みください。</h4>
-                    <button class="button-p">
-                        <p>確認する</p>
-                    </button>
-                </div>
-            </div>
-        </div>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- ====================================
+    <!-- ====================================
    contact part end
 -=-------------------------------------------->
 
@@ -477,52 +480,52 @@
     <!-- consultaion part end -->
 
 
-  <!-- notice part start -->
+    <!-- notice part start -->
 
-  <section id="notice_part">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-2">
-          <div class="notice_left">
-            <h2>お知らせ</h2>
-            <h4><img src="images/icon_arrow.svg" alt=""> お知らせ一覧</h4>
-          </div>
+    <section id="notice_part">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-2">
+                    <div class="notice_left">
+                        <h2>お知らせ</h2>
+                        <h4><img src="images/icon_arrow.svg" alt=""> お知らせ一覧</h4>
+                    </div>
+                </div>
+                <div class="col-lg-9">
+                    <div class="notice_right">
+                        <ul>
+                            <li>
+                                <div class="notice_item"><span class="date">2023.11.14</span>
+                                    <a href="#">お知らせ</a>
+                                    <span class="notice_right">ペアブライダルチェック始めました！</span>
+                                    <hr>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="notice_item"><span class="date">2023.11.14</span>
+                                    <a href="#">お知らせ</a>
+                                    <span class="notice_right">
+                                        年末年始の休診期間のお知らせ</span>
+                                    <hr>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="notice_item"><span class="date">2023.10.06</span>
+                                    <a href="#">お知らせ</a>
+                                    <span class="notice_right">
+                                        フォトフェイシャル秋の特別メニュー</span>
+                                    <hr>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
         </div>
-        <div class="col-lg-9">
-          <div class="notice_right">
-            <ul>
-              <li>
-                <div class="notice_item"><span class="date">2023.11.14</span>
-                  <a href="#">お知らせ</a>
-                  <span class="notice_right">ペアブライダルチェック始めました！</span>
-                  <hr>
-                </div>
-              </li>
-              <li>
-                <div class="notice_item"><span class="date">2023.11.14</span>
-                  <a href="#">お知らせ</a>
-                  <span class="notice_right">
-                    年末年始の休診期間のお知らせ</span>
-                  <hr>
-                </div>
-              </li>
-              <li>
-                <div class="notice_item"><span class="date">2023.10.06</span>
-                  <a href="#">お知らせ</a>
-                  <span class="notice_right">
-                    フォトフェイシャル秋の特別メニュー</span>
-                  <hr>
-                </div>
-              </li>
-            </ul>
-          </div>
+    </section>
 
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- notice part end -->
+    <!-- notice part end -->
 
 
 
@@ -600,6 +603,6 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/main.js"></script>
-  </body>
-  
-  </html>
+</body>
+
+</html>
