--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <!-- =================
+   <!-- =================
         Navpart Start
     ================= -->
     <div class="boxshadow">
@@ -221,6 +221,7 @@
   <!-- =================
       Navpart end
   ================= -->
+
   <!-- Hero part start -->
   <div class="banner_up">
    
@@ -286,35 +287,35 @@
       <div class="row button_responsive">
         <div class="col-4 col-lg-4 p-1">
           <div class="button_single">
-            <a href="#">婦人科診察</a>
+            <a href="treatment.html#giny_part_1">婦人科診察</a>
           </div>
 
         </div>
         <div class="col-4 col-lg-4 p-1">
           <div class="button_single">
-            <a href="#">プレコンセプションケア</a>
+            <a href="treatment.html#giny_part_2">プレコンセプションケア</a>
           </div>
 
         </div>
         <div class="col-4 col-lg-4 p-1">
           <div class="button_single">
-            <a href="#">ゆらぎ世代（更年期</a>
+            <a href="treatment.html#giny_part_3">ゆらぎ世代（更年期</a>
           </div>
         </div>
         <div class="col-4 col-lg-4 p-1">
           <div class="button_single">
-            <a href="#">美容・痩身</a>
+            <a href="treatment.html#giny_part_4">美容・痩身</a>
           </div>
         </div>
         <div class="col-4 col-lg-4 p-1">
           <div class="button_single">
-            <a href="#">
+            <a href="treatment.html#giny_part_5">
               鍼灸・アロマ・デトックス</a>
           </div>
         </div>
         <div class="col-4 col-lg-4 p-1">
           <div class="button_single">
-            <a href="#">
+            <a href="treatment.html#giny_part_6">
               栄養療法・点滴・自費検査</a>
           </div>
         </div>
@@ -915,8 +916,7 @@
   <!-- Extra Button -->
   <div class="container-fluid ex-cont">
     <div class="extra-button">
-      <a href="#">
-        <i class="fa-solid fa-computer"></i>
+      <a href="#"><i class="fa-solid fa-computer"></i>
       </a>
     </div>
   </div>
